--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           args: --docker
         env:
-          USERNAME: ${{ secrets.GH_USERNAME }}
+          USERNAME: luizae
           PASSWORD: ${{ secrets.GH_TOKEN }}
           REGISTRY: 'docker.pkg.github.com'
           DOCKERFILE: 'Dockerfile'
