--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,7 @@
 {
   "name": "Tindev Guru",
   "short_name": "Tindev",
-  "icons": [
-    {
-      "src": "/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ],
+  "icons": [],
   "start_url": ".",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
