--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "HOST=0.0.0.0 PORT=22000 react-scripts start",
-    "build": "react-scripts build",
+    "build": "(SET INLINE_RUNTIME_CHUNK=false) && react-scripts build",
     "test": "react-scripts test",
     "test:unit": "TZ=UTC NODE_TEST=unit-tests NODE_ENV=unit-tests ./node_modules/.bin/jest --useStderr --config jest.config.js --coverage",
     "eject": "react-scripts eject"
