--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,3 +19,22 @@ jobs:
       - run: npm run lint
       - run: npm run test:ci
       - run: npm run build
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
+      - name: Publish image to GitHub Package
+        uses: opspresso/action-docker@master
+        with:
+          args: --docker
+        env:
+          USERNAME: luizae
+          PASSWORD: ${{ secrets.GH_TOKEN }}
+          REGISTRY: 'docker.pkg.github.com'
+          DOCKERFILE: 'Dockerfile'
+          IMAGE_NAME: 'tindev'
+          TAG_NAME: 'qa'
+          LATEST: 'true'
