--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,18 +3,33 @@ name: Test and generate the docker image
 on: [pull_request]
 
 jobs:
-  build:
+  preparing:
+    - uses: actions/checkout@v2
+    - name: Preparing env with nodejs 14.17.0
+      uses: actions/setup-node@v1
+      with:
+        node-version: 14.17.0
+    - run: npm install
+  lint:
     runs-on: ubuntu-latest
+    needs: preparing
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 14.17.0
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14.17.0
-      - run: npm install
       - run: npm run lint
+  test:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
       - run: npm run test:ci
       - run: npm run build
+  test_build:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - run: npm run build
+  build_docker:
+    runs-on: ubuntu-latest
+    needs: test_build
+    steps:
       - name: Checkout
         uses: actions/checkout@v1
         with:
