--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,12 +4,14 @@ on: [pull_request]
 
 jobs:
   preparing:
-    - uses: actions/checkout@v2
-    - name: Preparing env with nodejs 14.17.0
-      uses: actions/setup-node@v1
-      with:
-        node-version: 14.17.0
-    - run: npm install
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Preparing env with nodejs 14.17.0
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.17.0
+      - run: npm install
   lint:
     runs-on: ubuntu-latest
     needs: preparing
