--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,32 +3,19 @@ name: Test and generate the docker image
 on: [pull_request]
 
 jobs:
-  preparing:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Preparing env with nodejs 14.17.0
+      - name: Linting and testing with nodejs 14.17.0
         uses: actions/setup-node@v1
         with:
           node-version: 14.17.0
       - run: npm install
-  lint:
-    runs-on: ubuntu-latest
-    needs: preparing
-    steps:
-      - run: npm run lint
-  test:
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
       - run: npm run test:ci
       - run: npm run build
-  test_build:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
       - run: npm run build
-  build_docker:
+  docker_publish:
     runs-on: ubuntu-latest
     needs: test_build
     steps:
