--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       - run: npm run build
   docker_publish:
     runs-on: ubuntu-latest
-    needs: test_build
+    needs: test
     steps:
       - name: Checkout
         uses: actions/checkout@v1
