--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,23 @@
-name: Creates a docker image for production
+name: Test and generate the docker image
 
 on: [pull_request]
 
 jobs:
-  docker:
+  test:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Linting and testing with nodejs 14.17.0
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.17.0
+      - run: npm install
+      - run: npm run test:ci
+      - run: npm run build
+      - run: npm run build
+  docker_publish:
+    runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout
         uses: actions/checkout@v1
